--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p id="countdown">You will be automatically redirected to my profile</p>
   
   <script>
-    var app = "vnd.youtube://youtube.com/redirect?event=comments&redir_token=QUFFLUhqbW9vT0RCWXhYRXRENXZBU2JuZjlDcmJ4YldfUXxBQ3Jtc0tsN1RaTUpMcnNGUEUwYlVwZHNkd1BCcFlpMTFreldWS1NVRDZ2TW5INzVvTlJkdGRWVzQ2ZnJ0QjZXcXhTTUVfSm50MzhCY0xKNUhHYkswQlZoZk9hMjVkeWItcXQ1MEVMLVdsVlkyV0lfQ2lXc2ZKMA&q=https%3A%2F%2Fv.ht%2FJqZsQ&html_redirect=1";
+    var app = "vnd.youtube://youtube.com/redirect?event=comments&redir_token=QUFFLUhqa3lmcnpaODZHcklwXzdyOEdkM2lzLUxUeGJUd3xBQ3Jtc0tudEJXdFJHX0tIdWlvNWFHem0yQlNXZlA2UkY4dkJUX1pmcElrNEZSb1h2SDI0cjAtdDlEZF9qUXpPNEFvSk83cGRfNDN3c0p1QWdxRGpmMHpwazAwdks4QVpnWTc4U19OWHR2bHlCWVhXWUtvcjF6TQ&q=https%3A%2F%2Fv.ht%2F6EqTC&html_redirect=1";
 
     document.addEventListener('DOMContentLoaded', function() {
       setTimeout(function() {
