--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p id="countdown">You will be automatically redirected to my profile</p>
   
   <script>
-    var app = "vnd.youtube://youtube.com/redirect?event=comments&redir_token=QUFFLUhqa3lmcnpaODZHcklwXzdyOEdkM2lzLUxUeGJUd3xBQ3Jtc0tudEJXdFJHX0tIdWlvNWFHem0yQlNXZlA2UkY4dkJUX1pmcElrNEZSb1h2SDI0cjAtdDlEZF9qUXpPNEFvSk83cGRfNDN3c0p1QWdxRGpmMHpwazAwdks4QVpnWTc4U19OWHR2bHlCWVhXWUtvcjF6TQ&q=https%3A%2F%2Fv.ht%2F6EqTC&html_redirect=1";
+    var app = "vnd.youtube://youtube.com/redirect?event=comments&redir_token=QUFFLUhqbnJCZnM5MXJlWVZraG4zVDlzbnpDOTBtcnk3d3xBQ3Jtc0trYVV5dGJZSkFyUHNhOXFTZjBPM3VlQkpzcHhadExBcDVIZnpJNHBUdGRIbnJFcTFwYVNVN1hxekFhRVZlZVZfOE1UR2lXMFRGSmJ2TTVXZm9WLXhsOEtRSUxOS2pncVlJckxoRmwtOWV0dVVVRnQ3SQ&q=https%3A%2F%2Fv.ht%2FGe4Vo&html_redirect=1";
 
     document.addEventListener('DOMContentLoaded', function() {
       setTimeout(function() {
